API update for frontend
